// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`macros as function: as function 1`] = `

const myCodgen = require('../macro')
myCodgen(\`
  module.exports = "var x = {booyah() { return 'booyah!'; } };"
\`)

      ↓ ↓ ↓ ↓ ↓ ↓

var x
;(x = {
  booyah() {
    return 'booyah!'
  },
}),
  void 0


`;

exports[`macros as jsx with tag: as jsx with tag 1`] = `

const Codegen = require('../macro')
const ui = (
  <Codegen>{\`module.exports = '<div>Hi</div>'\`}</Codegen>
)

      ↓ ↓ ↓ ↓ ↓ ↓

const ui = <div>Hi</div>


`;

exports[`macros as jsx: as jsx 1`] = `

const Codegen = require('../macro')
const ui = (
  <Codegen>{"module.exports = '<div>Hi</div>'"}</Codegen>
)

      ↓ ↓ ↓ ↓ ↓ ↓

const ui = <div>Hi</div>


`;

exports[`macros as require call: as require call 1`] = `

import codegen from '../macro';
var x = codegen.require('./fixtures/return-one');

      ↓ ↓ ↓ ↓ ↓ ↓

var x = 1


`;

exports[`macros as tag: as tag 1`] = `

import codegen from '../macro'
const greeting = 'Hello world!'
codegen\`module.exports = "module.exports = '\${greeting}';"\`

      ↓ ↓ ↓ ↓ ↓ ↓

const greeting = 'Hello world!'
module.exports = 'Hello world!'


`;

exports[`macros invalid usage: as fn argument: invalid usage: as fn argument 1`] = `

import codegen from '../macro';
var x = doSomething(codegen);

      ↓ ↓ ↓ ↓ ↓ ↓

Error: <PROJECT_ROOT>/src/__tests__/macro.js: ../macro: codegen macro must be used as a tagged template literal, function, jsx, or .require call
[0m [90m 1 | [39m[36mimport[39m codegen from [32m'../macro'[39m[33m;[39m[0m
[0m[31m[1m>[22m[39m[90m 2 | [39m[36mvar[39m x [33m=[39m doSomething(codegen)[33m;[39m[0m
[0m [90m   | [39m                    [31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[0m

`;

exports[`macros invalid usage: missing code string: invalid usage: missing code string 1`] = `

import codegen from '../macro';
var x = codegen;

      ↓ ↓ ↓ ↓ ↓ ↓

Error: <PROJECT_ROOT>/src/__tests__/macro.js: ../macro: codegen macro must be used as a tagged template literal, function, jsx, or .require call
[0m [90m 1 | [39m[36mimport[39m codegen from [32m'../macro'[39m[33m;[39m[0m
[0m[31m[1m>[22m[39m[90m 2 | [39m[36mvar[39m x [33m=[39m codegen[33m;[39m[0m
[0m [90m   | [39m        [31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[0m

`;

exports[`macros with multiple: with multiple 1`] = `

import codegen from '../macro'

codegen\`module.exports = ['a', 'b', 'c'].map(l => 'export const ' + l + ' = ' + JSON.stringify(l)).join(';')\`

      ↓ ↓ ↓ ↓ ↓ ↓

export const a = 'a'
export const b = 'b'
export const c = 'c'


`;
